--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ deno_error = { version = "0.7.0", features = ["serde_json", "serde", "url", "tok
 deno_ops = { version = "0.248.0", path = "./ops" }
 deno_unsync = "0.4.2"
 serde_v8 = { version = "0.281.0", path = "./serde_v8" }
-v8 = { version = "142.2.0", default-features = false }
+v8 = { git = "https://github.com/luaufusion/rusty_v8", default-features = false, branch = "luaufusion" }
 
 anyhow = "1"
 bencher = "0.1"
