--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -14,12 +14,13 @@ description = "A modern JavaScript/TypeScript runtime built with V8, Rust, and T
 path = "lib.rs"
 
 [features]
-default = ["include_icu_data", "v8_use_custom_libcxx"]
+default = ["include_icu_data", "v8_use_custom_libcxx", "v8_enable_sandbox"]
 include_icu_data = ["deno_core_icudata"]
 v8_use_custom_libcxx = ["v8/use_custom_libcxx"]
 v8_enable_pointer_compression = ["v8/v8_enable_pointer_compression"]
+v8_enable_sandbox = ["v8/v8_enable_sandbox", "serde_v8/v8_enable_sandbox"]
 v8_enable_v8_checks = ["v8/v8_enable_v8_checks"]
-include_js_files_for_snapshotting = []
+include_js_files_for_snapshotting = [] 
 unsafe_runtime_options = []
 unsafe_use_unprotected_platform = []
 snapshot_flags_eager_parse = []
