--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ repository = "https://github.com/denoland/deno_core"
 
 [workspace.dependencies]
 # Local dependencies
-deno_ast = { version = "=0.49.0", features = ["transpiling"] }
+deno_ast = { version = "0.50.0", features = ["transpiling"] }
 deno_core = { version = "0.372.0", path = "./core" }
 deno_core_icudata = "0.74.0"
 deno_core_testing = { path = "./testing" }
